--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -24,6 +24,12 @@ html {
   box-sizing: border-box;
 }
 
+header{
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
 body {
   background: rgb(9, 9, 121);
   background: linear-gradient(
@@ -80,6 +86,7 @@ body {
 .bg-gray {
   background-color: none;
 }
+
 
 .calendly {
   position: relative;
@@ -911,11 +918,13 @@ a {
     color: white;
   }
 
+ 
+
   .nav-menu {
     position: fixed;
     left: -100%;
     top: 7.5rem;
-
+    bottom: -3rem;
     flex-direction: column;
     background-color: #f14400;
     width: 100%;
